# VisualCV

./: .gitignore  CMakeLists.txt  forge.config.ts  package-lock.json  package.json
src/: index.ts  main.ts  models.ts
src/native/: ConvertImage.cpp  addon.cpp  readImage.h  win_delay_load_hook.cpp
src/view/: app.tsx  preload.ts  renderer.ts
src/view/components/: Dashboard.tsx  Deposits.tsx  cv-process.tsx
